<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.RegisterLogin">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/app_logo_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_icon"
                android:src="@drawable/ic_logo_app" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/selamat_datang_di_belanjaku"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/catat_dan_atur_belanjaan_mu_agar_lebih_mudah"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo_section">

            <LinearLayout
                android:id="@+id/register_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_register_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/register"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view_register_tab"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#046C4E" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_tab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_login_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/login"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/view_login_tab"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#046C4E"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintWidth_max="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="550dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edt_nama_lengkap"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="nama"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edt_tanggal_lahir"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="Tanggal Lahir"
                    android:drawableStart="@drawable/ic_calendar"
                    android:focusable="false"
                    android:hint="@string/tanggal_lahir"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/edt_email_register"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="Email"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edt_password_register"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edt_konfirmasi_password"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/konfirmasi_password"
                    android:inputType="textPassword" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_email_login"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="Email"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edt_password_login"
                    style="@style/AppEditTextStyle"
                    android:autofillHints="password"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_form"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#046C4E"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="320dp" />


</androidx.constraintlayout.widget.ConstraintLayout>